--- a/Install/haproxy/haproxy.cnf
+++ b/Install/haproxy/haproxy.cnf
@@ -4,7 +4,7 @@ listen rabbitmq_admin
     timeout client 3h
     timeout server 3h
     timeout connect 3h
-    server dev-master    127.0.0.1:15672
+    server dev-master    dex-haproxy:15672
 
 listen rabbitmq_cluster
     bind 0.0.0.0:5670
@@ -13,7 +13,7 @@ listen rabbitmq_cluster
     timeout server 3h
     timeout connect 3h
     balance roundrobin
-    server dev-master     127.0.0.1:5672      check inter 5000 rise 2 fall 3
+    server dev-master     dex-haproxy:5672      check inter 5000 rise 2 fall 3
 
 listen rabbitmq_stomp
     bind 0.0.0.0:35674
@@ -22,7 +22,7 @@ listen rabbitmq_stomp
     timeout server 3h
     timeout connect 3h
     balance roundrobin
-    server dev-master    127.0.0.1:15674     check inter 5000 rise 2 fall 3
+    server dev-master    dex-haproxy:15674     check inter 5000 rise 2 fall 3
 
 listen private_monitoring
     bind 0.0.0.0:9999
